improved code: functions playEasy and playHard removed and replaced by a single function play

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <button id="restart" onclick="location.reload();">Restart</button>
     </p>
     <p>
-      <button id="play-easy" onclick="playEasy();">Easy Mode</button>
-      <button id="play-hard" onclick="playHard();">Hard Mode</button>
+      <button id="play-easy" onclick="play(this);">Easy Mode</button>
+      <button id="play-hard" onclick="play(this);">Hard Mode</button>
     </p>
     <p id="showScore">Score: </p>
     <div class="grid"></div>
